2008-09-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa32-regs.h (IRA_COVER_CLASSES): Define.
	* pa64-regs.h (IRA_COVER_CLASSES): Define.

2008-09-07  Helge Deller  <deller@gmx.de>

        * pa/linux-atomic.c: New file.
	* pa/t-linux (LIB2FUNCS_STATIC_EXTRA): Define.
	* pa/t-linux64 (LIB2FUNCS_STATIC_EXTRA): Define.

2008-09-07  Richard Guenther  <rguenther@suse.de>
            Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/36630
	* tree-vect-transform.c (vect_update_ivs_after_vectorizer):
	Call STRIP_NOPS before calling evolution_part_in_loop_num.

2008-09-07  Dorit Nuzman  <dorit@il.ibm.com>
            Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/35642
	* config/rs6000/altivec.md (mulv8hi3): Implement.

2008-09-06  Jeff Law <law@redhat.com>

	* h8300.h (IRA_COVER_CLASSES): Define.

2008-09-06  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/14703
	* tree-ssa-live.c (remove_unused_scope_block_p): Remove ignored declarations.
	* passes.c (init_optimization_passes): Recompute inline parameters.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_function_ok_for_sibcall): Check for
	DECL being null.

2008-09-06  Richard Sandiford  <rdsandiford@goolemail.com>
	    Peter Fuerst  <post@pfrst.de>

	* doc/invoke.texi: Document -mr10k-cache-barrier=.
	* doc/extend.texi: Document __builtin_mips_cache.
	* config/mips/mips-ftypes.def: Add a (VOID, SI, CVPOINTER) entry.
	* config/mips/mips.opt (mr10k-cache-barrier=): New option.
	* config/mips/mips.h (TARGET_CPU_CPP_BUILTINS): Define
	__GCC_HAVE_BUILTIN_MIPS_CACHE.
	(TARGET_CACHE_BUILTIN, ISA_HAS_CACHE): New macros.
	* config/mips/mips.c (mips_r10k_cache_barrier_setting): New enum.
	(set_push_mips_isas): New variable.
	(mips_r10k_cache_barrier): New variable.
	(cache): New availability predicate.
	(mips_builtins): Add an entry for __builtin_mips_cache.
	(mips_build_cvpointer_type): New function.
	(MIPS_ATYPE_CVPOINTER): New macro.